# Conspiracy-Board

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: build.yml
data/: board.json
scripts/: bump-version.js  release.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: board_store.rs  extract.rs  lib.rs  library_index.rs  mail_drag.rs  main.rs  menu.rs  ocr.rs
src/components/: BoardCanvas.tsx
src/components/edges/: RedStringEdge.tsx  edgeTypes.ts  floating.ts
src/components/maintenance/: MediaDetailsDialog.tsx  ObjectView.tsx
src/components/nodes/: EvidenceCardNode.tsx  nodeTypes.ts
src/components/panels/: BoardPropertiesModal.tsx  BundleExportModal.tsx  BundleImportModal.tsx  CardEditor.tsx  ClusterPanel.tsx  CommsFields.tsx  ConnectionsSection.tsx  DocumentFields.tsx  EmailFields.tsx  EmailImportModal.tsx  EntityFields.tsx  EntityLink.tsx  EntityPickerDialog.tsx  FirstRunModal.tsx  GradeField.tsx  ImageEditorModal.tsx  ManageModal.tsx  ObjectPickerDialog.tsx  ParticipantsSection.tsx  Toolbar.tsx  WhenField.tsx
src/components/record/: RecordView.tsx
src/components/timeline/: TimelineDrawer.tsx  TimelineItem.tsx  TimelineKindFilter.tsx
src/components/ui/: BackgroundTaskIndicator.tsx  BusyOverlay.tsx  MarkdownView.tsx  MediaIcon.tsx  Menu.tsx  MetaList.tsx  Modal.tsx  PromptModal.tsx  UndoToast.tsx
src/data/: boardIndex.test.ts  boardIndex.ts  bundle.test.ts  bundle.ts  defaultBoard.ts  emptyBoard.ts  mappers.ts  schema.test.ts  schema.ts
src/hooks/: useDebouncedValue.ts  useDocHits.ts  useHighlightConnections.ts  useParticipantEdges.ts  useRoster.ts  useTimelineCards.ts  useUndoShortcut.ts  useVisibleCards.ts
src/lib/: autoLayout.test.ts  autoLayout.ts  base64.ts  clusters.test.ts  clusters.ts  comms.ts  connections.test.ts  connections.ts  dates.test.ts  dates.ts  entities.test.ts  entities.ts  events.ts  format.ts  grades.test.ts  grades.ts  ids.ts  imageCrop.test.ts  imageCrop.ts  importOffer.test.ts  importOffer.ts  kinds.test.ts  kinds.ts  layout.test.ts  layout.ts  maintenance.test.ts  maintenance.ts  mediaIcon.test.ts  mediaIcon.ts  phone.test.ts  phone.ts  roster.test.ts  roster.ts  search.test.ts  search.ts  slug.test.ts  slug.ts
src/lib/email/: addresses.test.ts  addresses.ts  files.ts  htmlToText.ts  mailDrag.test.ts  mailDrag.ts  mbox.test.ts  mbox.ts  meta.test.ts  meta.ts  parseEmails.test.ts  parseEmails.ts  persistMedia.ts
src/lib/import/: files.test.ts  files.ts  meta.ts  ocr.test.ts  ocr.ts
src/platform/: boardMenu.ts  importProgress.ts  inbox.ts  mailDrops.ts  useTauriListen.ts
src/storage/: StorageAdapter.ts  index.ts  ipc.ts  ipcSchemas.test.ts  ipcSchemas.ts  media.ts  tauriStorage.ts
src/store/: boardMigration.test.ts  boardMigration.ts  boardStore.ts  bundleExportStore.ts  bundleImportStore.ts  emailImportStore.ts  imageEditorStore.ts  jobQueueStore.ts  manageStore.ts  mediaAuditStore.ts  promptStore.ts  propertiesStore.ts
src/types/: board.ts  reactflow.ts  view.ts
